# nomad_flask_app

./: file.py  main.py  nextjs.csv  pyproject.toml  python.csv
extractors/: indeed.py
templates/: Index.html  search.html
