[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["김재만 <daga4242@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"
bs4 = "^0.0.1"
requests = "^2.28.2"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
